--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.8.1"
   },
   "devDependencies": {
-    "@unocss/astro": "^66.1.2",
-    "unocss": "^66.1.2"
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.8"
   }
 }
