--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
-    "astro": "^5.8.1"
+    "astro": "^5.8.1",
+    "lucide-astro": "^0.511.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
