--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.8.1",
-    "lucide-astro": "^0.511.0"
+    "lucide-astro": "^0.511.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
