--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "terser": "^5.40.0"
   }
 }
