--- a/public/.htaccess
+++ b/public/.htaccess
@@ -42,21 +42,23 @@
     ExpiresByType application/font-woff2 "access plus 1 month"
 </IfModule>
 
-# Add cache-control headers
+# Add cache-control headers with reasonable caching
 <IfModule mod_headers.c>
-    # Cache images for 30 days
+    # Cache images for 7 days
     <FilesMatch "\.(jpg|jpeg|png|gif|webp|svg)$">
-        Header set Cache-Control "max-age=2592000, public"
+        Header set Cache-Control "max-age=604800, public"
     </FilesMatch>
-    
-    # Cache CSS and JS for 30 days
+
+    # Cache CSS and JS for 1 day
     <FilesMatch "\.(css|js)$">
-        Header set Cache-Control "max-age=2592000, public"
+        Header set Cache-Control "max-age=86400, public"
     </FilesMatch>
-    
-    # Cache HTML for 1 hour
+
+    # Don't cache HTML files to prevent stale content
     <FilesMatch "\.html$">
-        Header set Cache-Control "max-age=3600, public"
+        Header set Cache-Control "no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires "0"
     </FilesMatch>
 </IfModule>
 
